--- a/frontEnd/src/containers/userProfile/userProfile.module.css
+++ b/frontEnd/src/containers/userProfile/userProfile.module.css
@@ -5,7 +5,7 @@
     justify-content: center;
 }
 .mainContainer{
-    z-index: -1;
+    z-index: 0;
     background-color: #82ca66;
     width: 60%;
     margin-top: 40px;
